Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-16859

socklnd: can't add an NI using an interface if its alias was used to add NI first

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      If "bond01" is an alias interface of "bond0" created for example like this:

      ip addr add 1.2.13.6/24 brd + dev bond0 label bond01 

      then the following sequence of commands results in an error when adding NI on bond0:

      # modprobe lnet
      # lnetctl lnet configure
      # lnetctl net add --net tcp --if bond01
      # lnetctl net add --net tcp --if bond0
      ---
      add:
      - net: 
        errno: -17
        descr: Object exists
      ...
      

      Adding bond0 first, then bond01 works fine.

       

       

            ssmirnov Serguei Smirnov
            ssmirnov Serguei Smirnov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: